--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
     background-color: rgb(185, 60, 60);
     text-align: center;
 }
+nav a {
+    margin-top: 5px;
+    padding: 2px;
+    font-size: 20px;
+    text-decoration: none;
+    color: rgba(red, green, blue, alpha)
+}
 
 p { 
     color: azure;
