--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ nav a {
     font-size: 20px;
     text-decoration: none;
     color: rgba(red, green, blue, alpha)
+    display: flex;
+  justify-content: center;
 }
 
 p { 
