--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: rgb(185, 60, 60);
-    text-align: end;
+   .centro{
+text-align: justify;
+   }
 }
 nav a {
     margin-top: 5px;
